[build-system]
requires = [
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "kvex"
description = "A Kivy extension library for desktop applications."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Natural Language :: English",
  "Intended Audience :: Developers",
]
dependencies = [
  "Kivy==2.1.0",
  "arrow==1.2.3,<=2.0",
]

[tool.setuptools.packages.find]
include = [
  "kvex*",
]
